# llm-export-cleaner

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: canonical-schema.md  real-export-validation.md  windows-application.md
scripts/: Install.cmd  Install.ps1  build-windows.ps1  make_icon.py  widget_gallery.py
src/llm_export_cleaner/: __init__.py  chatgpt_projects.py  claude_projects.py  cli.py  desktop.py  exporter.py  filters.py  library.py  normalizers.py  text_cleaning.py  timestamps.py
src/llm_export_cleaner/ui/: __init__.py  app.py  presenters.py  theme.py  widgets.py
tests/: test_app_layout.py  test_cleaner.py  test_desktop_smoke.py  test_focus_and_keys.py  test_icon.py  test_presenters.py  test_rule_toggles.py  test_theme_widgets.py
